# sarsef-2025-26

./: .gitignore  LICENSE  Science Fair YB 2025-2026.md  claude.md  pyproject.toml  requirements.txt
.cache/matplotlib/: fontlist-v390.json
.ipython/profile_default/: history.sqlite
.jupyter/: migrated
artifacts/: 20251116-10:23-osm-roads-download.md
data/: inaturalist_diamondback.geojson  inaturalist_snakes.geojson  osm_roads_query.overpass  study_area.geojson
memory/: README.md
notebooks/: inaturalist_preview.ipynb  osm_roads_preview.ipynb
sarsef/: ask-questions-and-identify-problems.md  develop-and-use-models.md  plan-investigations.md
scripts/: fetch_inaturalist.py  osm_to_geojson.py  plot_diamondback_plan.py  plot_inat_roads.py
